Definindo a mensagem de erro de conexão com o servidor.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ingresso Filmes</string>
+    <string name="error_server">"Falha ao conectar-se ao Servidor, verifique sua conexão com a internet."</string>
 </resources>
