--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Ingresso Filmes</string>
+    <string name="error_dialog_title">"Ocorreu um erro"</string>
+    <string name="error_dialog_button">"Tentar novamente"</string>
     <string name="error_server">"Falha ao conectar-se ao Servidor, verifique sua conexão com a internet."</string>
 </resources>
